--- a/products/installation-cpaas.yaml
+++ b/products/installation-cpaas.yaml
@@ -90,7 +90,7 @@ products:
     package: rhsso-operator
     index: quay.io/integreatly/rhsso-index:v7.6.3-1
   mcg:
-    channel: stable-4.11
+    channel: stable-4.12
     installFrom: index
     package: mcg-operator
-    index: quay.io/integreatly/mcg-index:v4.11.4
+    index: quay.io/integreatly/mcg-index:v4.12.3-rhodf
