--- a/manifests/integreatly-mcg/mcg.package.yaml
+++ b/manifests/integreatly-mcg/mcg.package.yaml
@@ -1,5 +1,5 @@
 channels:
-- currentCSV: mcg-operator.v4.11.4
+- currentCSV: mcg-operator.v4.12.3-rhodf
   name: rhmi
 defaultChannel: rhmi
 packageName: rhmi-mcg
