--- a/products/installation.yaml
+++ b/products/installation.yaml
@@ -75,10 +75,10 @@ products:
         installFrom: local
         manifestsDir: integreatly-marin3r
     mcg:
-        channel: stable-4.11
+        channel: stable-4.12
         installFrom: index
         package: mcg-operator
-        index: quay.io/integreatly/mcg-index:v4.11.4
+        index: quay.io/integreatly/mcg-index:v4.12.3-rhodf
     observability:
         channel: alpha
         installFrom: index
