--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -10,7 +10,7 @@ linters-settings:
   gosimple:
     checks: ["all"]
   staticcheck:
-    checks: ["all", -SA4006, -SA9003, -SA5011, -SA4001, -SA4010, SA1019, -SA1030, -SA6000, -SA4009, -SA4022, -SA5001]
+    checks: ["all"]
   errcheck:
     check-blank: true
 
