MGDAPI-5871 add rbacs and update controller logic

--- a/bundles/managed-api-service/1.38.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.38.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -184,6 +184,13 @@ spec:
       clusterPermissions:
         - rules:
             - apiGroups:
+                - package-operator.run
+              resources:
+                - clusterpackages
+              verbs:
+                - get
+                - list
+            - apiGroups:
                 - ""
               resources:
                 - configmaps
@@ -437,6 +444,20 @@ spec:
                 - get
                 - list
                 - update
+            - apiGroups:
+                - monitoring.rhobs
+              resources:
+                - podmonitors
+                - probes
+                - prometheusrules
+                - servicemonitors
+              verbs:
+                - create
+                - delete
+                - get
+                - list
+                - update
+                - watch
             - apiGroups:
                 - noobaa.io
               resources:
