MGDAPI-5961 refactoring clusterPackage preflight to work with different names

--- a/config/hive-config/package.yaml
+++ b/config/hive-config/package.yaml
@@ -1,12 +1,12 @@
 apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
-  name: rhoam-config
+  name: managed-api-service
 objects:
   - apiVersion: package-operator.run/v1alpha1
     kind: ClusterPackage
     metadata:
-      name: rhoam-config
+      name: managed-api-service
       namespace: ${NAMESPACE}
     spec:
       image: ${CONFIG_IMAGE}
