MGDAPI-6011 - address review comments + rebase

--- a/bundles/managed-api-service/1.39.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.39.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -43,7 +43,7 @@ metadata:
     capabilities: Basic Install
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/integreatly/managed-api-service:rhoam-v1.39.0
+    containerImage: quay.io/integreatly/managed-api-service:master
     olm.properties: '[{"type": "olm.maxOpenShiftVersion", "value": "4.13"}]'
     operatorframework.io/suggested-namespace: redhat-rhoam-operator
     operators.operatorframework.io/builder: operator-sdk-v1.21.0
@@ -83,9 +83,6 @@ metadata:
         },
         "limitador": {
           "marin3r-limitador": "quay.io/3scale/limitador:v0.5.1"
-        },
-        "grafana-operator": {
-          "observability-origin-oauth-proxy": "registry.redhat.io/openshift4/ose-oauth-proxy@sha256:582fc2d21cb3654f22f3ca50c39966041846e16a1543fc35c6a83948a2fa6c40"
         }
       }
   name: managed-api-service.v1.39.0
@@ -685,7 +682,7 @@ spec:
                         value: default@test.com
                       - name: QUOTA
                         value: "200"
-                    image: quay.io/integreatly/managed-api-service:rhoam-v1.39.0
+                    image: quay.io/integreatly/managed-api-service:master
                     imagePullPolicy: Always
                     livenessProbe:
                       exec:
