--- a/bundles/rhsso-operator/bundles.yaml
+++ b/bundles/rhsso-operator/bundles.yaml
@@ -29,3 +29,19 @@ bundles:
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.2-5
     - name: rhsso-operator.v7.6.3-1
       image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.3-1
+    - name: rhsso-operator.v7.6.3-2
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.3-2
+    - name: rhsso-operator.v7.6.4-1
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.4-1
+    - name: rhsso-operator.v7.6.4-2
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.4-2
+    - name: rhsso-operator.v7.6.4-3
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.4-3
+    - name: rhsso-operator.v7.6.5-3
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.5-3
+    - name: rhsso-operator.v7.6.5-5
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.5-5
+    - name: rhsso-operator.v7.6.5-6
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.5-6
+    - name: rhsso-operator.v7.6.5-8
+      image: registry.redhat.io/rh-sso-7/sso7-rhel8-operator-bundle:7.6.5-8
