MGDAPI-6163 Added RBAC to create grafana Deployment

--- a/bundles/managed-api-service/1.39.0/manifests/managed-api-service.clusterserviceversion.yaml
+++ b/bundles/managed-api-service/1.39.0/manifests/managed-api-service.clusterserviceversion.yaml
@@ -296,6 +296,7 @@ spec:
                 - replicasets
                 - statefulsets
               verbs:
+                - create
                 - get
                 - patch
                 - update
